--- a/css/chess.css
+++ b/css/chess.css
@@ -69,3 +69,20 @@
 }
 
 
+.button {
+    background-color: #444;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+.fog.white-1e1d7 {
+    background-color: #a9a9ff;
+}
+
+.fog.black-3c85d {
+    background-color: #448
+}
