--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -7,10 +7,22 @@
     border-radius: 3px;
 }
 
+body {
+    margin: 0px;
+}
+
+#top-spacer {
+    height: 3em;
+}
+
 /* header */
 header {
     width: 100%;
     text-align: center;
+}
+
+header > h1 {
+    margin-top: 0px;
 }
 
 header > p {
@@ -21,12 +33,13 @@ header > p {
  *     ARTICLE
  */
 article {
-    line-height: 1.5em;
+    line-height: 1.4em;
 }
 
 img, svg, .svg-container {
     display: block;
     max-width: 100%;
+    width: 100%;
     margin: auto;
 }
 
@@ -69,9 +82,9 @@ blockquote {
  */
 pre {
     line-height: 1.4em;
-    overflow: auto;
     padding-top: 1em;
     padding-bottom: 1em;
+    overflow-x: auto; /* for mobile */
     -webkit-overflow-scrolling: touch;
 }
 
@@ -107,6 +120,9 @@ div.footnote > ul, div.footnote > ol {
 li > p {
     margin-bottom: 0;
 }
+li:first-child {
+    margin-top: 0;
+}
 
 /* tables
  */
@@ -130,7 +146,6 @@ table {
  */
 main {
     position: relative;
-    max-width: 66ch;
     padding-left: 2ch;
     padding-right: 2ch;
     margin: auto;
@@ -153,17 +168,17 @@ main {
 }
 
 /*
- * Desktop ( > 1200 px width)
+ * Desktop ( > 190 charcters width)
  *
  * Place TOC on left
- * Distribute text
  */
-@media (min-width: 1200px) {
+@media (min-width: 190ch) {
 
+    /*
     article {
         text-align: justify;
         text-justify: distribute;
-    }
+    }*/
 
     div.toc {
         text-align: left;
