--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -58,7 +58,7 @@ img, svg, .svg-container {
  */
 h1 > a, h2 > a, h3 > a, h4 > a {
     position: absolute;
-    left: -0.5ch;
+    left: 0.25ch;
 }
 
 /* blockquotes
@@ -159,15 +159,6 @@ main {
 }
 
 /*
- * Small screens
- */
-@media (max-width: 700px) {
-    th, td {
-        word-break: break-word;
-    }
-}
-
-/*
  * Desktop ( > 190 charcters width)
  *
  * Place TOC on left
@@ -188,6 +179,11 @@ main {
         height: 100%;
         overflow: auto;
         -webkit-overflow-scrolling: touch;
+    }
+
+    h1 > a, h2 > a, h3 > a, h4 > a {
+        position: absolute;
+        left: -0.5ch;
     }
 
 }
