--- a/theme/css/colors/color-light-default.css
+++ b/theme/css/colors/color-light-default.css
@@ -30,11 +30,11 @@
     /* headers and primary color sequence */
     --h1: #00619c;
     --h2: #007859;
-    --h3: #325b09;
-    --h4: #695700; 
+    --h3: #886229;
+    --h4: #9e5079; 
 
     /* loud colors */
-    --e1: #a83d65;
+    --e1: #0069b3;
     --e2: #8a4a92;
     --e3: #543500;
 }
