--- a/theme/css/colors/color-light-rotated.css
+++ b/theme/css/colors/color-light-rotated.css
@@ -30,11 +30,11 @@
     /* headers and primary color sequence */
     --h1: #944062;
     --h2: #0071a7;
-    --h3: #2b5860;
-    --h4: #375f58; 
+    --h3: #007959;
+    --h4: #886329; 
 
     /* loud colors */
-    --e1: #776206;
+    --e1: #a93e65;
     --e2: #9a4e23;
     --e3: #1f4137;
 }
