--- a/css/geometry.css
+++ b/css/geometry.css
@@ -5,6 +5,7 @@ body, html {
 
 /* Toolbar */
 .toolbar {
+  font-size: 110%;
   position: absolute; 
   top: 10px;
   right: 20px;
@@ -76,4 +77,18 @@ circle.point.intersection.reified {
 }
 .hidden {
   display: none;
+}
+
+
+@media (min-device-width: 672px) {
+  .active-ref {
+    position: fixed;
+    bottom: 1em;
+    padding: 0.1em 0.4em;
+    margin-left: -0.4em;
+    list-style-position: inside;
+    pointer-events: none;
+    border: 1px solid var(--text);
+    background: var(--g1a);
+  }
 }
